[SMD-247] update validation error structure and tests
openapi spec updates to reflect validation error changes

update validation error structure and tests

openapi spec updates to reflect validation error changes

WIP amending tests and adding cell index to failures

[SMD-247] correct some cell index construction

...

...

...

...

...

...

...
